# svgfill

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
src/: arrange_polygons.cpp  graph_2d.h  main.cpp  progress.h  svgfill.cpp  svgfill.h
